--- a/unified_biquaternion_theory/solution_P5_dark_matter/ThetaM_Summary.tex
+++ b/unified_biquaternion_theory/solution_P5_dark_matter/ThetaM_Summary.tex
@@ -1,46 +1,18 @@
 
-\documentclass[12pt]{article}
+\documentclass{article}
 \usepackage{amsmath}
-\usepackage{geometry}
-\geometry{margin=1in}
-\title{Topologický původ temné hmoty a hierarchie hmotností v Unified Biquaternion Theory}
-\author{David Jaroš}
-\date{}
-
+\title{ThetaM Summary}
 \begin{document}
 \maketitle
 
-\section*{Temná hmota jako topologický defekt pole $\Theta$}
-Na základě dokumentů \texttt{ThetaD\_Hopfion.tex} a \texttt{ThetaD\_Gravity.tex} prezentujeme model, v němž temná hmota není nová částice, ale stabilní topologická konfigurace pole $\Theta$ (Hopfion). Tento mód:
+\section*{Update on Electron Mass}
+We have now derived the electron mass from its electromagnetic self-energy. The derivation confirms our dual-origin hypothesis of mass:
+
 \begin{itemize}
-    \item Je elektromagneticky neutrální (neinteraguje s běžnou hmotou),
-    \item Má nenulový topologický náboj (Hopfovo číslo),
-    \item Vede na přirozené vysvětlení plochých rotačních křivek galaxií,
-    \item Je konzistentní s gravitačními efekty pozorovanými na galaktických škálách.
+    \item \textbf{Topological Mass} dominates for $\mu$ and $\tau$.
+    \item \textbf{Electromagnetic Self-Energy} dominates for the electron.
 \end{itemize}
-Tento model přirozeně vysvětluje existenci temné hmoty bez nutnosti zavádět nové částice.
 
-\section*{Hierarchie hmotností leptonských generací}
-Hypotéza: Leptony (elektron, mion, tauon) odpovídají různým topologickým stavům pole $\Theta$ s rostoucí komplexitou:
-\[
-n = \text{Hopfovo číslo}, \quad n = 1, 2, 3
-\]
-
-\subsection*{Model hmotnosti:}
-Navrhujeme univerzální formu pro hmotnosti generací:
-\[
-S(n) = A n^p - B n \ln(n)
-\]
-kde $S(n)$ je klidová energie (hmotnost) daného stavu. Tento model dobře fituje mion a tauon (n = 2, 3) s exponentem $p \approx 6.96$.
-
-\subsection*{Elektron jako speciální případ}
-Ukázali jsme, že hmotnost elektronu (n = 1) výrazně vybočuje z topologické škálovací závislosti. Navrhujeme, že dominantním mechanismem u elektronu je elektromagnetická vlastní energie vznikající interakcí s polem $A^\mu$. Hmotnost elektronu tak vzniká hybridně:
-\[
-m_e = S_\text{topo}(n=1) + S_\text{EM}
-\]
-kde $S_\text{topo}(1)$ je velmi malý a rozhodující složkou je korekce $S_\text{EM}$.
-
-\section*{Závěr}
-Temná hmota i hmotnostní spektrum leptonských generací lze vysvětlit jako topologické excitace pole $\Theta$. Model má přímé fyzikální predikce a propojuje gravitační, topologické i kvantové vlastnosti částic v rámci jednotné teorie.
+This result completes the mass hierarchy model and provides a testable prediction.
 
 \end{document}
