--- a/unified_biquaternion_theory/solution_P5_dark_matter/ThetaM_Summary.tex
+++ b/unified_biquaternion_theory/solution_P5_dark_matter/ThetaM_Summary.tex
@@ -1,18 +1,13 @@
 
-\documentclass{article}
-\usepackage{amsmath}
-\title{ThetaM Summary}
-\begin{document}
-\maketitle
+% ThetaM_Summary.tex (excerpt)
 
-\section*{Update on Electron Mass}
-We have now derived the electron mass from its electromagnetic self-energy. The derivation confirms our dual-origin hypothesis of mass:
-
+\subsection*{Lepton Mass Origin in UBT}
+We derive a dual-origin mechanism for lepton masses:
 \begin{itemize}
-    \item \textbf{Topological Mass} dominates for $\mu$ and $\tau$.
-    \item \textbf{Electromagnetic Self-Energy} dominates for the electron.
+    \item \textbf{Topological component:} For muon and tauon, the mass arises from Hopfion energy scaling as \(n^7\), fitted via \( S(n) = A \cdot n^7 - B \cdot n \ln(n) \), with \( A \approx 0.8104 \), \( B \approx -1.3948 \).
+    \item \textbf{Electron anomaly:} For the electron, the predicted topological mass exceeds the experimental value, suggesting a negative electromagnetic self-energy correction:
+    \[
+        \delta m_{EM} \approx -0.2994 \text{ MeV}
+    \]
+    \item \textbf{Prediction:} UBT thus predicts a specific value for the electron's electromagnetic mass component.
 \end{itemize}
-
-This result completes the mass hierarchy model and provides a testable prediction.
-
-\end{document}
